examples/invalid/07_payloadless_variant_call.lane
// invalid: payloadless variants must be called with an empty payload list
module Examples.Invalid07

pub enum Option[A] {
  none()
  some(A)
}

pub let value : Option[Int] = Option::none
